<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_prompt"
        android:textColor="#999999"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <EditText
            android:id="@+id/port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/login_setport"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="8dp">

        <Button
            android:id="@+id/ip_confirm"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/login_confirm"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <Button
            android:id="@+id/ip_cancel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/login_cancel"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
